--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -28,7 +28,7 @@ a:hover {color: #006080;}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="left")
 # check helpers.R for a list of packages
 ```
-```{r load data, echo=FALSE, include=FALSE, cache=FALSE}
+```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2002
 load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
@@ -37,9 +37,6 @@ load("../data/SecureData.RData")
 load("../data/MARFISSCI.SPECIES.RData")
 ISDB_info<-file.info("../data/ISDB.ISSETTYPECODES.RData")
 MARFIS_info<-file.info("../data/MARFISSCI.SPECIES.RData")
-```
-
-```{r Test outside app, echo=FALSE, include=FALSE, cache=FALSE}
 lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 lapply(list.files("../Rmd", pattern = ".[Rr]$", full.names = TRUE),source)
 ```
@@ -47,14 +44,14 @@ lapply(list.files("../Rmd", pattern = ".[Rr]$", full.names = TRUE),source)
 ```{r Select Search Area interactively, echo=FALSE, include=FALSE, cache=FALSE}
 #studyArea <- st_read("{{path_to_geoms}}")
 #studyArea <- st_read("geoms_slc.geojson")
-#studyArea <- st_read("../Rmd/geoms_slc_test.geojson") #test offshore area outside app
-studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson") #test coastal area outside app
+studyArea <- st_read("../Rmd/geoms_slc_test.geojson") #test offshore area outside app
+#studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson") #test coastal area outside app
 site <- sf::st_centroid(studyArea)  
 ```
-#```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')}
+#```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_cetaceans_EN.Rmd', 'report_SARA_EN.Rmd')}
 #```
 
-```{r child = '../Rmd/report_habitat_EN.Rmd'}
+```{r child = '../Rmd/report_fish_EN.Rmd'}
 ```
 
 <!-- END  -->
@@ -101,8 +98,9 @@ This report incorporates information from a variety of sources with differing le
 table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
 ```{r}
-kable(table_tier,align="l", 
-      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.")
+knitr::kable(table_tier,align="l", 
+      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.", booktabs = T, escape = F, linesep="") %>%
+    kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 # **SEARCH RESULTS**  
