--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -19,7 +19,6 @@ Data notes:
 - Due to 10 m spatial resolution of the satellite data, NDVI values for each pixel represent a spatial average within an area of 10 m2, so sparse vegetation might not be captured in the map.
 
 #### ***Area-specific Intertidal Vegetation and Rockweed search results***  
-
 ```{r overlap rockweed, echo=FALSE, results='asis'}
 rockweed_intersect <- st_intersection(studyArea,st_make_valid(rockweed_sf))
 rockweed_result<-as.numeric(nrow(rockweed_intersect))
@@ -33,10 +32,14 @@ rockweed_result<-as.numeric(nrow(rockweed_intersect))
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-#rockweed_plot<-plot_rockweed(rockweed_sf, studyArea, land50k_sf, 5, bounds_sf)
-#if(rockweed_result > 1){print(rockweed_plot)} else {NULL}
-#rwMap<-plot_rockweed(rockweed_sf, areaMap, bboxMap)
-#if(rwMap > 1){print(rockweed_plot)} else {NULL}
+rwMap<-plot_rockweed(rockweed_sf, areaMap, bboxMap)
+if(rockweed_result > 1){rwMap} else {NULL}
 ```
-
-rockweedStats
+```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
+rwTable <- rockweedStats(rockweed_sf, studyArea)
+```
+```{r}
+knitr::kable(rwTable,align="l",
+             caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep="") %>%
+  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+```
