--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -46,8 +46,8 @@ lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 #studyArea <- st_read("geoms_slc.geojson")
 # Uncomment the following to Test Outside the App:
 #studyArea <- st_read("../Rmd/geoms_slc_test.geojson")#Offshore
-#studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson")#coastal 
-studyArea <- st_read("../Rmd/geoms_slc_no_land.geojson")#no land
+studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson")#coastal 
+#studyArea <- st_read("../Rmd/geoms_slc_no_land.geojson")#no land
 site <- sf::st_centroid(studyArea)  
 lapply(list.files("../Rmd", pattern = ".[Rr]$", full.names = TRUE),source)
 lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
