--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -46,17 +46,17 @@ lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 #studyArea <- st_read("geoms_slc.geojson")
 # Uncomment the following to Test Outside the App:
 #studyArea <- st_read("../Rmd/geoms_slc_test.geojson")#Offshore
-studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson")#coastal 
-#studyArea <- st_read("../Rmd/geoms_slc_no_land.geojson")#no land
+#studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson")#coastal 
+studyArea <- st_read("../Rmd/geoms_slc_no_land.geojson")#no land
 site <- sf::st_centroid(studyArea)  
 lapply(list.files("../Rmd", pattern = ".[Rr]$", full.names = TRUE),source)
-lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
+#lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 ```
 
-#```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_SARA_EN.Rmd')}
+#```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')}
 #```
 
-```{r child = '../Rmd/report_habitat_EN.Rmd'}
+```{r child = '../Rmd/report_fish_EN.Rmd'}
 ```
 
 <!-- END  -->
