--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -16,7 +16,7 @@ Data notes:
 - NDVI values on the raster map indicate relative density of the intertidal vegetation (biomass) and are NOT calibrated (to be regarded as indication only). NDVI values on the maps range from 0.4 to 1 with larger values indicating denser vegetation.
 - Likelihood of rockweed presence in the polygons is categorized as following: Not present, Present, Likely present, and Unknown. “Likely present” attributes are assigned for the shorelines associated with rocky substrate while “Present” attributes are assigned based on the ground truth data. Unknown attributes are assigned for sand/mud shoreline types, and do not necessarily exclude presence of rockweed.
 - Regional map represent a mosaic of daily images collected at different time of year from 2016 to 2019. These maps do not represent a long-term average, although intertidal vegetation patches tend to be stationary and persistent.
-- Due to 10 m spatial resolution of the satellite data, NDVI values for each pixel represent a spatial average within an area of 10 m2, so sparse vegetation might not be captured in the map.
+- Due to the 10 m spatial resolution of the satellite data, NDVI values for each pixel represent a spatial average within an area of 10 m^2^, so sparse vegetation might not be captured in the map.
 
 #### ***Area-specific Intertidal Vegetation and Rockweed search results***  
 ```{r overlap rockweed, echo=FALSE, results='asis'}
@@ -32,14 +32,20 @@ rockweed_result<-as.numeric(nrow(rockweed_intersect))
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-rwMap<-plot_rockweed(rockweed_sf, areaMap, bboxMap)
-if(rockweed_result > 1){rwMap} else {NULL}
+if(rockweed_result > 1){
+plot_rockweed(rockweed_sf, areaMap, bboxMap)
+} else {NULL}
 ```
+
 ```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
+if(rockweed_result > 1){
 rwTable <- rockweedStats(rockweed_sf, studyArea)
+} else {NULL}
 ```
 ```{r}
+if(rockweed_result > 1){
 knitr::kable(rwTable,align="l",
              caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep="") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+} else {NULL}
 ```
